# Dataseter

./: .dockerignore  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  cli.py  demo.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py  setup_models.py  start_server.py  test_live.py
.github/workflows/: basic-ci.yml  ci.yml  docker-publish.yml
config/: config.yaml
docs/: ADVANCED_AI_FEATURES.md  BEGINNER_GUIDE.md  INSTALLATION.md  PDF_EXTRACTION_GUIDE.md  README.md  WEB_SCRAPING_GUIDE.md
docs/docker/: DOCKER_COMMANDS.md  DOCKER_INSTRUCTIONS.md  DOCKER_README.md
docs/testing/: TESTING.md  TEST_SUMMARY.md
examples/: basic_usage.py
scripts/: README.md  demo.py  docker-build-multiplatform.sh  docker-build.sh  run_tests.py  test_live.py  test_ntv.py
src/: __init__.py  core.py
src/analyzers/: __init__.py  analyzer.py  quality.py  statistics.py  visualizer.py
src/api/: main.py
src/cli/: main.py
src/extractors/: __init__.py  base.py  ebook.py  office.py  pdf.py  text.py  web.py
src/formatters/: __init__.py  csv.py  huggingface.py  jsonl.py  parquet.py
src/processors/: __init__.py  adversarial_tester.py  chunker.py  cleaner.py  deduplicator.py  knowledge_extractor.py  metacognitive_annotator.py  privacy.py  quality.py  semantic_chunker.py  semantic_quality.py
src/utils/: spacy_loader.py
src/web/frontend/: app.js  index.html
tests/: __init__.py  test_advanced_features.py  test_api.py  test_basic.py  test_core.py  test_end_to_end.py  test_extractors.py  test_processors.py
tests/sample_data/: sample.txt
