[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataseter"
version = "1.0.0"
authors = [
    {name = "Dataseter Team", email = "dataseter@example.com"},
]
description = "Advanced AI Training Dataset Creator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "aiohttp>=3.8.0",
    "selenium>=4.8.0",
    "pdfplumber>=0.8.0",
    "PyPDF2>=3.0.0",
    "pytesseract>=0.3.10",
    "Pillow>=9.4.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.1.0",
    "ebooklib>=0.18",
    "langdetect>=1.0.9",
    "nltk>=3.8.0",
    "spacy>=3.5.0",
    "pyarrow>=11.0.0",
    "datasets>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
ocr = [
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
]
web = [
    "selenium>=4.8.0",
    "playwright>=1.30.0",
]
ml = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/mkupermann/dataseter"
Documentation = "https://docs.dataseter.io"
Repository = "https://github.com/mkupermann/dataseter.git"
Issues = "https://github.com/mkupermann/dataseter/issues"

[project.scripts]
dataseter = "cli:main"

[tool.setuptools]
packages = ["src", "src.extractors", "src.processors", "src.formatters", "src.analyzers", "src.api", "src.cli", "src.web"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.html", "*.css", "*.js"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", "venv", ".venv"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"